# Fast-Api

./: .gitignore  DbConnections.py  database.db  docker-compose.yaml  main.py  pyproject.toml  server.py
agents/: BaseAgent.py  BaseProgrammingAgent.py  Domain.py  agent.py  config.py  decision_agent.py  java_agent.py  load_vector_embedding.py  main.py  orchestrator_agent.py  python_agent.py
client/: rq_client.py
models/: ChatBot.py  ChatWindow.py  User.py
queues/: worker.py
rag/: index.py  java_rag.py  meta_data_extractor.py  python_rag.py  python_rag_implementation.py  rag.py  rag_implementation.py
routes/: auth_routes.py  chat_routes.py  chat_window_router.py  extractor_context.py
services/: access_token_service.py  auth_user.py  chat_bot_service.py  chat_service.py  chat_window_service.py  extractor_class.py  jwt_service.py  pdf_content_extractor.py
