[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langextract>=1.5.0",
    "mem0ai==2.0.4",
    "ollama>=0.6.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis==8.0.0",
    "rq==2.9.0",
    "sentence-transformers>=5.6.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
